# book_alchemy

./: book_alchemy.py  config.py  pyproject.toml
app/: __init__.py  forms.py  logger.py  models.py  services.py  views.py
app/data/: library.sqlite  test_library.sqlite
app/main/: views.py
app/templates/: add_author.html  add_book.html  book_table.html  books_sorted.html  delete_book.html  home.html  navbar.html  search.html
tests/: test_basics.py
